--- a/micro/proxy/nginx.conf
+++ b/micro/proxy/nginx.conf
@@ -4,5 +4,44 @@ pid                     /tmp/nginx.pid;
 worker_rlimit_nofile    8192;
 
 events {
-    worker_connections  4096;
+  worker_connections  4096;
+}
+
+http {
+  include    /etc/nginx/mime.types;
+
+  access_log /dev/stdout;
+  uninitialized_variable_warn on;
+  large_client_header_buffers 4 8k;
+
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' '';
+  }
+
+  map $args $q_args {
+    default ?$args;
+    '' '';
+  }
+
+  server {
+      listen 8080;
+      server_name playphraseme.domain;
+      resolver 127.0.0.11 ipv6=off valid=5s;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+
+      location ~ ^/video(/.*)?$ {
+          proxy_pass https://storage.cloud.google.com/playphraseme-video$1;
+      }
+
+      location / {
+          proxy_pass http://web:3033;
+      }
+      # location ~ ^(/.*)?$ {
+      #     proxy_pass http://web:3033$1$q_args;
+      # }
+  }
 }
