movies statistic removed

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,2 +1,8 @@
 **/.git
 **/micro
+**/target/cljbuild
+**/target/uberjar/classes
+**/target/uberjar/cljsbuild-compiler-0
+**/target/uberjar/stale
+**/target/uberjar/playphraseme-site-0.1.0-SNAPSHOT.jar
+
