--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,9 +10,7 @@ services:
     networks:
       - playphraseme-site-net
   proxy:
-    image: nginx
-    volumes:
-      - ./micro/proxy/nginx.conf:/etc/nginx/nginx.conf:ro
+    build: ./micro/proxy
     ports:
      - "80:8080"
     networks:
