--- a/micro/proxy/nginx.conf
+++ b/micro/proxy/nginx.conf
@@ -34,7 +34,7 @@ http {
       proxy_set_header Connection $connection_upgrade;
 
       location ~ ^/video(/.*)?$ {
-          proxy_pass https://storage.cloud.google.com/playphraseme-video$1;
+          proxy_pass https://storage.googleapis.com/playphraseme-video$1;
       }
 
       location / {
