routes for mobile

--- a/micro/proxy/nginx.conf
+++ b/micro/proxy/nginx.conf
@@ -40,6 +40,9 @@ http {
       location / {
           proxy_pass http://web:3033;
       }
+
+      rewrite ^/%23(.*)$  /\#$1;
+
       # location ~ ^(/.*)?$ {
       #     proxy_pass http://web:3033$1$q_args;
       # }
