mobile app page

--- a/micro/proxy/nginx.conf
+++ b/micro/proxy/nginx.conf
@@ -26,7 +26,12 @@ http {
 
   server {
       listen 8080;
-      server_name playphraseme.domain;
+      server_name www.playphrase.me;
+
+      if ($http_x_forwarded_proto != "https") {
+          rewrite ^(.*)$ https://$server_name$1 permanent;
+      }
+
       resolver 127.0.0.11 ipv6=off valid=5s;
 
       proxy_http_version 1.1;
@@ -40,8 +45,5 @@ http {
       location / {
           proxy_pass http://web:3033;
       }
-      # location ~ ^(/.*)?$ {
-      #     proxy_pass http://web:3033$1$q_args;
-      # }
   }
 }
