--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,9 @@ services:
       - playphraseme-site-net
   proxy:
     build: ./micro/proxy
+    restart: always
     ports:
-     - 80:8080
+      - 80:8080
     networks:
       - playphraseme-site-net
 
