--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ figwheel_server.log
 /resources/public/sitemap.xml
 /resources/public/sitemap-1.xml
 /resources/public/sitemap-2.xml
+/resources/public/sitemap-3.xml
+/resources/public/sitemap-4.xml
