--- a/micro/proxy/nginx.conf
+++ b/micro/proxy/nginx.conf
@@ -26,11 +26,13 @@ http {
 
   server {
       listen 8080;
+      listen 443 ssl;
       server_name www.playphrase.me;
 
-      if ($http_x_forwarded_proto != "https") {
-          rewrite ^(.*)$ https://$server_name$1 permanent;
-      }
+      ssl on;
+      ssl_certificate /etc/nginx/ssl/cert.pem;
+      ssl_certificate_key /etc/nginx/ssl/privkey.pem;
+      server_tokens off;
 
       resolver 127.0.0.11 ipv6=off valid=5s;
 
@@ -38,12 +40,24 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
 
+      if ($http_x_forwarded_proto != "https") {
+          rewrite ^(.*)$ https://$server_name$1 permanent;
+      }
+
       location ~ ^/video(/.*)?$ {
-          proxy_pass https://storage.googleapis.com/playphraseme-phrases-video$1;
+          proxy_pass https://playphraseme8video.file.core.windows.net/playphraseme-video/video$1?sv=2018-03-28&ss=f&srt=o&sp=r&se=2020-02-08T01:53:04Z&st=2019-03-24T17:53:04Z&spr=https&sig=FpkMeLw1H%2FVOZ9x3CYmp0Q1ZLFLzRCU4JS%2BYN7YXjnU%3D;
       }
 
       location / {
           proxy_pass http://web:3033;
       }
-  }
+
+      location /.well-known/acme-challenge/cKrrnWLV_NGIIrwY65nwv9YluS1QXfPgWwKSJDiijB0 {
+          return 200 'cKrrnWLV_NGIIrwY65nwv9YluS1QXfPgWwKSJDiijB0.Xc6puMjR_yneaxSBEmIfGsDnul5aqYtXJHXMUAxh8vw';
+      }
+
+      location /.well-known/acme-challenge/wi-rlh4m4Kw3Vqu_ggqEB15pGE3SLlG9kmev3lqh_EM {
+          return 200 'wi-rlh4m4Kw3Vqu_ggqEB15pGE3SLlG9kmev3lqh_EM.Xc6puMjR_yneaxSBEmIfGsDnul5aqYtXJHXMUAxh8vw';
+      }
+}
 }
