--- a/micro/proxy/Dockerfile
+++ b/micro/proxy/Dockerfile
@@ -3,5 +3,6 @@ FROM nginx
 MAINTAINER Eugene Potapenko <eugene.john.potapenko@gmail.com>
 
 COPY ./nginx.conf /etc/nginx/nginx.conf
+COPY ./ssl /etc/nginx/ssl
 
 
