--- a/micro/proxy/nginx.conf
+++ b/micro/proxy/nginx.conf
@@ -26,10 +26,35 @@ http {
 
   server {
       listen 8080;
+      server_name www.playphrase.me;
+
+      # if ($http_x_forwarded_proto != "https") {
+      #     rewrite ^(.*)$ https://$server_name$1 permanent;
+      # }
+
+      resolver 127.0.0.11 ipv6=off valid=5s;
+
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection $connection_upgrade;
+
+      location / {
+          proxy_pass http://web:3033;
+      }
+
+      location /.well-known/acme-challenge/AMsx1bnCN1O_fftXLky8Vt3cp5EeDFtQD5yHcaZvms8 {
+          return 200 'AMsx1bnCN1O_fftXLky8Vt3cp5EeDFtQD5yHcaZvms8.Xc6puMjR_yneaxSBEmIfGsDnul5aqYtXJHXMUAxh8vw';
+      }
+
+      location /.well-known/acme-challenge/zfcb2OWgmapo5Dieau1uyQd72VdSh10MEOpCp_vV7Gc {
+          return 200 'zfcb2OWgmapo5Dieau1uyQd72VdSh10MEOpCp_vV7Gc.Xc6puMjR_yneaxSBEmIfGsDnul5aqYtXJHXMUAxh8vw';
+      }
+  }
+
+  server {
       listen 443 ssl;
       server_name www.playphrase.me;
 
-      ssl on;
       ssl_certificate /etc/nginx/ssl/cert.pem;
       ssl_certificate_key /etc/nginx/ssl/privkey.pem;
       server_tokens off;
@@ -40,24 +65,14 @@ http {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
 
-      if ($http_x_forwarded_proto != "https") {
-          rewrite ^(.*)$ https://$server_name$1 permanent;
-      }
-
       location ~ ^/video(/.*)?$ {
-          proxy_pass https://playphraseme8video.file.core.windows.net/playphraseme-video/video$1?sv=2018-03-28&ss=f&srt=o&sp=r&se=2020-02-08T01:53:04Z&st=2019-03-24T17:53:04Z&spr=https&sig=FpkMeLw1H%2FVOZ9x3CYmp0Q1ZLFLzRCU4JS%2BYN7YXjnU%3D;
+          return 301 https://playphraseme8video.file.core.windows.net/playphraseme-video/video$1;
       }
 
       location / {
           proxy_pass http://web:3033;
       }
-
-      location /.well-known/acme-challenge/cKrrnWLV_NGIIrwY65nwv9YluS1QXfPgWwKSJDiijB0 {
-          return 200 'cKrrnWLV_NGIIrwY65nwv9YluS1QXfPgWwKSJDiijB0.Xc6puMjR_yneaxSBEmIfGsDnul5aqYtXJHXMUAxh8vw';
-      }
-
-      location /.well-known/acme-challenge/wi-rlh4m4Kw3Vqu_ggqEB15pGE3SLlG9kmev3lqh_EM {
-          return 200 'wi-rlh4m4Kw3Vqu_ggqEB15pGE3SLlG9kmev3lqh_EM.Xc6puMjR_yneaxSBEmIfGsDnul5aqYtXJHXMUAxh8vw';
-      }
 }
+
+
 }
