--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@ profiles.clj
 .idea/
 *.iml
 figwheel_server.log
+test-config.edn
 /resources/public/sitemap.xml
 /resources/public/sitemap-1.xml
 /resources/public/sitemap-2.xml
