--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ micro/proxy/ssl/
 resources/public/sitemap-phrases-0.xml
 resources/public/sitemap-phrases-1.xml
 resources/public/sitemap-phrases-2.xml
+node_modules/
